--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "files-from-path": "^1.0.0",
     "form-data": "^4.0.0",
     "mongodb": "^6.1.0",
+    "nodemon": "^3.0.1",
     "octokit": "^3.1.1",
     "zip-a-folder": "^3.1.3"
   },
